[package]
name = "dotastats"
version = "0.1.0"
authors = ["woziebly"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
curl = "0.4"
regex = "1"
lazy_static = "1"