[package]
name = "dotastats"
version = "0.1.0"
authors = ["woziebly"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
regex = "1"
lazy_static = "1"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.8"
serde_repr = "0.1"
clap = "3.0.0-beta.2"
chrono = "0.4"
config = "0.9"
ordered-float = "2.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git"}
mongodb = "*"
strum = "0.19"
strum_macros = "0.19"
log = "0.4"
simplelog = "^0.7.6"